test/files/neg/t12324.scala

@throws[Exception] class ScalaClass[T](someList: List[T]) {
  throw new IllegalArgumentException("Boom!")
}
