test/files/neg/t12324.check
t12324.scala:2: error: `@throws` only allowed for methods and constructors
@throws[Exception] class ScalaClass[T](someList: List[T]) {
                         ^
1 error
